--- a/clock.html
+++ b/clock.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="outer-container">
-        <img src="/Images/background-2.JPG">
+        <img src="Images/background-2.jpg">
     </div>
 
     <div class="contents">
